--- a/_pages/hide.html
+++ b/_pages/hide.html
@@ -1,4 +1,4 @@
-<script src="http://code.jquery.com/jquery-1.8.2.js"></script>
-<script type="text/javascript" src="invisible_debut.js" ></script>
+<script type="text/javascript" id="clustrmaps" src="//clustrmaps.com/map_v2.js?d=qYQjwHjY7SboCTxadDq9iRiUamGADfuoHTbC9hCoxYg"></script>
+
 <body>
 </body>
