--- a/_pages/hide.html
+++ b/_pages/hide.html
@@ -1,4 +1,4 @@
-<script type="text/javascript" id="clustrmaps" src="//clustrmaps.com/map_v2.js?d=qYQjwHjY7SboCTxadDq9iRiUamGADfuoHTbC9hCoxYg"></script>
+<script type="text/javascript" id="clustrmaps" src="//clustrmaps.com/map_v2.js?d=L3I6m30SxRnLqGSHv-l3WqfVraVkpxQdBOUT3NIxZ84&cl=ffffff&w=a"></script>
 
 <body>
 </body>
